    IViewModel. This is a compatible change because IVIewModel<TModel> is a more specific type than IViewModel.
  * The return type of the FromBitmapData(BitmapDataInfo) method has been changed to IViewModel<BitmapDataInfo> from
    IViewModel. This is a compatible change because IVIewModel<TModel> is a more specific type than IViewModel.

* KGySoft.Drawing.ImagingTools.View namespace:
----------------------------------------------
* ViewFactory class:
  * Opening a view for an empty palette no longer closes the view immediately.


+ KGySoft.Drawing.DebuggerVisualizers.dll
=========================================

+ KGySoft.Drawing.DebuggerVisualizers namespace:
------------------------------------------------
+ New IDebuggerVisualizerProvider interface (.NET Framework 4.7.2 only): Allows providing the implementation of
  debugger visualizer extensions for Visual Studio 2022.
+ DebuggerHelper class:
  + New GetDebuggerVisualizers method: Gets the classic debugger visualizers of a specified assembly.
  + New GetDebuggerVisualizerProviders method (.NET Framework 4.7.2 only): Gets the debugger visualizer provider
    implementations of an assembly for the new extension-based visualizers supported by Visual Studio 2022.
+ StreamExtensions class:
  + New AsReadOnlySequence method (.NET Framework 4.7.2 only)
  + New AsStream method (.NET Framework 4.7.2 only)

+ KGySoft.Drawing.DebuggerVisualizers.Serialization namespace:
--------------------------------------------------------------
+ New SerializerBase class

+ KGySoft.Drawing.DebuggerVisualizers.View namespace:
-----------------------------------------------------
+ New VisualizerExtensionWpfAdapter<TModel> class (.NET Framework 4.7.2 only)


+ KGySoft.Drawing.DebuggerVisualizers.GdiPlus.dll
=================================================

+ KGySoft.Drawing.DebuggerVisualizers.GdiPlus namespace:
--------------------------------------------------------
+ GdiPlusDebuggerHelper class: