@@ -197,15 +197,14 @@ namespace KGySoft.Drawing.ImagingTools.ViewModel
         /// </summary>
         /// <param name="bitmapDataInfo">The debug information for a <see cref="BitmapData"/>.</param>
         /// <returns>An <see cref="IViewModel"/> instance that represents a view model for a <see cref="BitmapData"/>.</returns>
-        public static IViewModel<BitmapDataInfo> FromBitmapData(BitmapDataInfo? bitmapDataInfo) => new BitmapDataVisualizerViewModel { BitmapDataInfo = bitmapDataInfo };
+        public static IViewModel<BitmapDataInfo?> FromBitmapData(BitmapDataInfo? bitmapDataInfo) => new BitmapDataVisualizerViewModel { BitmapDataInfo = bitmapDataInfo };
 
         /// <summary>
         /// Creates a view model for a <see cref="CustomBitmapInfo"/> from arbitrary debug information.
         /// </summary>
         /// <param name="customBitmapInfo">The debug information for a custom bitmap.</param>
         /// <returns>An <see cref="IViewModel"/> instance that represents a view model for a <see cref="CustomBitmapInfo"/>.</returns>
-        public static IViewModel FromCustomBitmap(CustomBitmapInfo customBitmapInfo)
-            => new CustomBitmapVisualizerViewModel(customBitmapInfo ?? throw new ArgumentNullException(nameof(customBitmapInfo), PublicResources.ArgumentNull));
+        public static IViewModel<CustomBitmapInfo?> FromCustomBitmap(CustomBitmapInfo? customBitmapInfo) => new CustomBitmapVisualizerViewModel(customBitmapInfo);
 
         /// <summary>
         /// Creates a view model from a <see cref="Graphics"/>.
